# QRScanner

./: CMakeLists.txt  Entzerren.cpp  Entzerren.h  Matrix.cpp  Matrix.h  QRdecoder.cpp  QRdecoder.h  README.md  Vector.cpp  Vector.h  main.cpp
ffb_rotated/: ffb_r_Labelbild.bmp-autosave.kra  ffb_r_transformed.bmp-autosave.kra
lib/libBV/include/: AviRead.h  AviWrite.h  Sobel.h
lib/libBV/lib/: AviRead.cxx  AviWrite.cxx  BmpRead.cxx  BmpWrite.cxx  ConvImg.cxx  FFT.cxx  lib.cbp
test_90/: test_90_binary_rotated.bmp-autosave.kra
test_r/: test_r_binary_rotated.bmp-autosave.kra
